--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,37 @@
 @tailwind base;
+
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --heading-color: #333;
+    --heading-font-size: 2rem;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary) var(--primary);
   }
+
+h1{
+    font-size: 2.25rem; /* 36px */
+    line-height: 2.5rem; /* 40px */
+    font-weight: bold;
+}
+
+h2{
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+    font-weight: bold;
+}
+
+h3, h4, h5, h6 {
+    color: var(--heading-color);
+    font-size: var(--heading-font-size);
+  }
+
+p{
+    font-size: medium;
 }
